--- a/client/src/style/components/header.css
+++ b/client/src/style/components/header.css
@@ -1,1 +1,104 @@
 /* header.css */
+
+/* Global */
+:root {
+  /* Color */
+  --color-white: #ffffff;
+  --color-grey-white: #f7f6ee;
+  --color-light-grey: #bfbfbf;
+  --color-grey: #949494;
+  --color-rich-Burgundy: #7b1e3a;
+  --color-light-yellow: #fffec3;
+  --color-Soft-Gold: #daa49a;
+  --color-Creamy-Beige: #ead2ac;
+  --color-Dark-Charcoal: #333333;
+  --color-Vintage-Olive: #587d71;
+  --color-black: #000000;
+  /* Font Size */
+  --font-large: 40px;
+  --font-medium: 22px;
+  --font-regular: 15px;
+  --font-small: 12px;
+  --font-micro: 10px;
+  /* Font Weight */
+  --weight-bold: 700;
+  --weight-semi-bold: 600;
+  --weight-regular: 400;
+  /* Size */
+  --size-border-radius: 4px;
+  /* Animation Duration */
+  --animation-duration: 300ms;
+}
+
+ul, li {
+  list-style: none;
+  font-family:'Josefin Sans', sans-serif;
+}
+
+.mbti {
+  text-decoration: none;
+  color: var(--color-dark-charcoal);
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  color: var(--color-dark-charcoal);
+}
+
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 16px;
+  background-color: var(--color-white); /* Light background for the header */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.navbar__menu {
+  display: flex;
+  color: var(--color-soft-gold); /* Text color for menu items */
+}
+
+.navbar__menu__item {
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border-radius: var(--size-border-radius);
+  transition: background-color var(--animation-duration) ease;
+}
+
+.navbar__menu__item:hover {
+  background-color: var(--color-rich-burgundy); /* Highlight on hover */
+  color: var(--color-Dark-Charcoal);
+  border: 1px solid var(--color-Dark-Charcoal);
+}
+
+.navbar__toggle-btn {
+  position: absolute;
+  top: 24px;
+  right: 32px;
+  font-size: 24px;
+  display: none;
+  color: var(--color-dark-charcoal); /* Icon color */
+}
+
+@media screen and (max-width: 767px) {
+  .navbar__toggle-btn {
+    display: block;
+  }
+
+  .navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+
+  .navbar__menu.open {
+    display: block;
+    background-color: var(--color-rich-burgundy); /* Mobile menu background */
+  }
+}
