--- a/client/src/style/pages/home.css
+++ b/client/src/style/pages/home.css
@@ -30,4 +30,19 @@
     --animation-duration: 300ms;
   }
   
+  #home {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color-grey-white);
+  }
+  .home__container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
   
