--- a/client/src/style/pages/home.css
+++ b/client/src/style/pages/home.css
@@ -2,47 +2,108 @@
 
 /* Global */
 :root {
-    /* Color */
-    --color-white: #ffffff;
-    --color-grey-white: #f7f6ee;
-    --color-light-grey: #bfbfbf;
-    --color-grey: #949494;
-    --color-rich-Burgundy: #7b1e3a;
-    --color-light-yellow: #fffec3;
-    --color-Soft-Gold: #daa49a;
-    --color-Creamy-Beige: #ead2ac;
-    --color-Dark-Charcoal: #333333;
-    --color-Vintage-Olive: #587d71;
-    --color-black: #000000;
-    /* Font Size */
-    --font-large: 40px;
-    --font-medium: 22px;
-    --font-regular: 15px;
-    --font-small: 12px;
-    --font-micro: 10px;
-    /* Font Weight */
-    --weight-bold: 700;
-    --weight-semi-bold: 600;
-    --weight-regular: 400;
-    /* Size */
-    --size-border-radius: 4px;
-    /* Animation Duration */
-    --animation-duration: 300ms;
-  }
-  
-  #home {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    background-color: var(--color-grey-white);
-  }
-  .home__container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    position: relative;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
+  /* Color */
+  --color-white: #ffffff;
+  --color-grey-white: #f7f6ee;
+  --color-light-grey: #bfbfbf;
+  --color-grey: #949494;
+  --color-rich-Burgundy: #7b1e3a;
+  --color-light-yellow: #fffec3;
+  --color-Soft-Gold: #daa49a;
+  --color-Creamy-Beige: #ead2ac;
+  --color-Dark-Charcoal: #333333;
+  --color-Vintage-Olive: #587d71;
+  --color-black: #000000;
+  /* Font Size */
+  --font-large: 40px;
+  --font-medium: 22px;
+  --font-regular: 15px;
+  --font-small: 12px;
+  --font-micro: 10px;
+  /* Font Weight */
+  --weight-bold: 700;
+  --weight-semi-bold: 600;
+  --weight-regular: 400;
+  /* Size */
+  --size-border-radius: 4px;
+  /* Animation Duration */
+  --animation-duration: 300ms;
+}
+
+body {
+  padding-top: 60px; /* Adjust the value based on the height of your header */
+  font-family: "Josefin Sans", sans-serif;
+}
+
+/* Home section styles */
+#home {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: calc(
+    100vh - 60px
+  ); /* Adjust for the height of the fixed header */
+  background-color: var(--color-grey-white);
+}
+
+.home__container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Add margin to sections */
+section {
+  margin-bottom: 20px; /* Adjust as needed */
+}
+
+/* Styles for the #about section */
+#about {
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: var(--color-grey-white);
+  border-radius: var(--size-border-radius);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin: 0 auto;
+}
+
+/* Styles for the #contact section */
+#contact {
+  padding: 20px;
+  background-color: var(--color-grey-white);
+  border-radius: var(--size-border-radius);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin: 0 auto;
+}
+
+.contact__title {
+  font-size: var(--font-large);
+  color: var(--color-dark-charcoal);
+  margin-bottom: 20px;
+}
+
+.contact__email {
+  display: block;
+  color: var(--color-rich-Burgundy);
+  margin-bottom: 10px;
+  text-decoration: none;
+}
+
+.contact__links {
+  font-size: var(--font-large);
+}
+
+.contact__links a {
+  color: var(--color-dark-charcoal);
+  margin: 0 10px;
+  text-decoration: none;
+}
+
+.contact__links a:hover {
+  color: var(--color-rich-Burgundy);
+}
