--- a/client/src/style/components/rankings.css
+++ b/client/src/style/components/rankings.css
@@ -71,6 +71,24 @@
   border-bottom: 1px solid var(--color-light-grey);
 }
 
+.goShop {
+  display: flex;
+}
+
+.goShop button{
+  margin-left: auto;
+  padding: 10px;
+  border-radius: var(--size-border-radius);
+  background-color: var(--color-rich-Burgundy);
+  color: var(--color-white);
+  border: none;
+  cursor: pointer;
+}
+
+.goShop button:hover {
+  background-color: var(--color-Soft-Gold);
+}
+
 @media screen and (max-width: 768px) {
   .ranking-container {
     width: 50%;
